added string values in resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AndroidTask</string>
+    <string name="button_retry">Retry</string>
+    <string name="button_cancel">Cancel</string>
 </resources>
